// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionLink /> with additional className matches its snapshot 1`] = `
<CustomizedNavigationLink
  ariaLabel="Download the file"
  block={true}
  className="y-actionLink TEST_CLASSNAME"
  href="https://yammer.com"
>
  <FixedGridRow
    className=

        {
          padding-bottom: 0.6rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 0.2rem;
        }
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <CustomizedBlock
        push={2}
      >
        <Down
          block={true}
          size="16"
        />
      </CustomizedBlock>
    </FixedGridColumn>
    <FixedGridColumn>
      <CustomizedBlock
        textSize="mediumSub"
      >
        Download
      </CustomizedBlock>
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedNavigationLink>
`;

exports[`<ActionLink /> with href and ariaLabel matches its snapshot 1`] = `
<CustomizedNavigationLink
  ariaLabel="Download file"
  block={true}
  className="y-actionLink"
  href="https://yammer.com"
  newWindow={true}
>
  <FixedGridRow
    className=

        {
          padding-bottom: 0.6rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 0.2rem;
        }
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <CustomizedBlock
        push={2}
      >
        <Down
          block={true}
          size="16"
        />
      </CustomizedBlock>
    </FixedGridColumn>
    <FixedGridColumn>
      <CustomizedBlock
        textSize="mediumSub"
      >
        Download
      </CustomizedBlock>
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedNavigationLink>
`;

exports[`<ActionLink /> with href matches its snapshot 1`] = `
<CustomizedNavigationLink
  block={true}
  className="y-actionLink"
  href="https://yammer.com"
  newWindow={true}
>
  <FixedGridRow
    className=

        {
          padding-bottom: 0.6rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 0.2rem;
        }
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <CustomizedBlock
        push={2}
      >
        <Down
          block={true}
          size="16"
        />
      </CustomizedBlock>
    </FixedGridColumn>
    <FixedGridColumn>
      <CustomizedBlock
        textSize="mediumSub"
      >
        Download
      </CustomizedBlock>
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedNavigationLink>
`;

exports[`<ActionLink /> with onClick and ariaLabel matches its snapshot 1`] = `
<CustomizedClickable
  ariaLabel="Download file"
  block={true}
  className="y-actionLink"
  onClick={[MockFunction]}
>
  <FixedGridRow
    className=

        {
          padding-bottom: 0.6rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 0.2rem;
        }
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <CustomizedBlock
        push={2}
      >
        <Down
          block={true}
          size="16"
        />
      </CustomizedBlock>
    </FixedGridColumn>
    <FixedGridColumn>
      <CustomizedBlock
        textSize="mediumSub"
      >
        Download
      </CustomizedBlock>
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedClickable>
`;

exports[`<ActionLink /> with onClick matches its snapshot 1`] = `
<CustomizedClickable
  block={true}
  className="y-actionLink"
  onClick={[MockFunction]}
>
  <FixedGridRow
    className=

        {
          padding-bottom: 0.6rem;
          padding-left: 0;
          padding-right: 0;
          padding-top: 0.2rem;
        }
    gutterSize="small"
  >
    <FixedGridColumn
      fixed={true}
    >
      <CustomizedBlock
        push={2}
      >
        <Down
          block={true}
          size="16"
        />
      </CustomizedBlock>
    </FixedGridColumn>
    <FixedGridColumn>
      <CustomizedBlock
        textSize="mediumSub"
      >
        Download
      </CustomizedBlock>
    </FixedGridColumn>
  </FixedGridRow>
</CustomizedClickable>
`;
